@@ -615,5 +615,6 @@
     <string name="complete_form">Please complete the form!</string>
     <string name="no_drafts">No drafts found</string>
     <string name="no_queued">No queued tweets</string>
+    <string name="menu_show_top_tweets">Filter \"Top Tweets\"</string>
 
 </resources>
